--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno de desarrollo...
-configuracion.autor.nombre=Juan Doe
-configuracion.autor.email=juan.doe@gmail.com
+configuracion.texto=Configurando entorno de desarrollo
+configuracion.autor.nombre=Juan
+configuracion.autor.email=juancorvelle@gmail.com
