--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.datasource.driver-class-name=jdbc:mysql://localhost:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.driver-class-name=jdbc:mysql://localhost:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=create
 
