--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -1,4 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+# local
+# spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+
+# docker
+spring.datasource.url=jdbc:mysql://config-server:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+
 spring.datasource.username=root
 spring.datasource.password=root
 
