config mysql docker

--- a/servicio-productos-dev.properties
+++ b/servicio-productos-dev.properties
@@ -2,7 +2,7 @@
 # spring.datasource.url=jdbc:mysql://localhost:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 
 # docker
-spring.datasource.url=jdbc:mysql://config-server:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://servicio-mysql8:3306/db_springboot_cloud?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
 
 spring.datasource.username=root
 spring.datasource.password=root
